<resources>
    <string name="app_name" translatable="false">Hauk</string>
    <string name="img_alt_logo" translatable="false">Hauk</string>
    <string name="action_settings">Settings</string>
    <string name="label_heading">Open source location sharing</string>
    <string name="label_source_link" translatable="false">https://github.com/bilde2910/Hauk</string>
    <string name="label_duration">Share duration:</string>
        <string name="sel_unit_opt_minutes">minute(s)</string>
        <string name="sel_unit_opt_hours">hour(s)</string>
        <string name="sel_unit_opt_days">day(s)</string>
    <string name="label_mode">Sharing mode:</string>
        <string name="sel_mode_opt_alone">Share my own location only</string>
        <string name="sel_mode_opt_create_group">Create a group share</string>
        <string name="sel_mode_opt_join_group">Join a group share</string>
    <string name="label_allow_adopt">Allow adoption:</string>
        <string name="chk_allow_adopt">Allow others to add me into a group share</string>
        <string name="label_explain_adopt">(What\'s this?)</string>
    <string name="label_nickname">Nickname:</string>
    <string name="label_pin">Group PIN:</string>
    <string name="label_status">Status:</string>
        <string name="label_status_none">Location sharing inactive</string>
        <string name="label_status_wait">Waiting for initial GNSS fix…</string>
        <string name="label_status_lost_gnss">Searching for location…</string>
        <string name="label_status_coarse">Waiting for high accuracy fix…</string>
        <string name="label_status_ok">Location sharing active!</string>
        <string name="label_status_disconnected">Unable to reach backend server</string>
    <string name="btn_start">Start sharing</string>
    <string name="btn_stop">Stop sharing [%s]</string>
    <string name="btn_link">Create new sharing link</string>
    <string name="btn_adopt">Merge an existing sharing link</string>
    <string name="dialog_confirm_stop_title">Stop sharing?</string>
    <string name="dialog_confirm_stop_body">Are you sure you wish to stop sharing your location?</string>
    <string name="dialog_confirm_stop_share">Are you sure you wish to delete this sharing link?</string>
    <string name="btn_stop_short">Stop</string>
    <string name="btn_share_short">Share</string>
    <string name="label_heading_links">Currently active links</string>
    <string name="label_heading_no_links">No currently active links</string>
    <string name="link_type_solo">Your location only</string>
    <string name="link_type_group_host">Group share (host)</string>
    <string name="link_type_group_member">Group share (member)</string>
    <string name="label_pin_head">YOUR GROUP PIN:</string>
    <string name="label_pin_help">Share this PIN with the others in your group to let them join your location sharing group</string>
    <string name="explain_adopt_title">Share adoption</string>
    <string name="explain_adopt_body">Hauk allows you to create location sharing sessions for yourself as well as for a group of people. If someone creates a group share, they get a group code that others can use to join the sharing session.\n\nHowever, the person creating the group share also gets the option to add others who are already sharing their locations into their group. This process is called adoption.\n\nYou can decide whether or not you want to allow others to incorporate your shared location into their group share by checking this checkbox.\n\nIf you enable this option and share your location to a group of friends, and someone else also wants to share their location, they can create a group share and add you to their map, so both of you appear on the same shared location map. This is useful if you are e.g. driving and cannot use your phone, as adoption of your shared location by others requires no interaction on your part.</string>
    <string name="adopt_title">Adopt another user\'s session</string>
    <string name="adopt_body">You can adopt an existing individual location sharing session to incorporate it in this group share. Please paste the URL or share ID of the person you wish to adopt (e.g. %s?XXXX-XXXX) and assign a nickname to this person.</string>
    <string name="label_share_url">Share ID/URL:</string>
    <string name="create_link_title">Create new sharing link</string>
    <string name="create_link_body">You can create several links to access your shared location. Each link can be stopped individually, allowing fine-grained control over who can see your location at any time.\n\nAny additional links you create this way will be single-user shares that show your location only.</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_create">Create</string>
    <string name="btn_show_settings">Open settings</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_remember">Don\'t show again</string>
    <string name="action_copy">Copy link</string>
    <string name="action_copied">Copied link from Hauk</string>
    <string name="action_stop">Stop sharing</string>
    <string name="notify_body">Hauk is sharing your location to %s</string>
    <string name="progress_connect_title">Connecting</string>
    <string name="progress_connect_body">Connecting to Hauk…</string>
    <string name="progress_resolving_proxy">Resolving proxy hostname…</string>
    <string name="progress_adopt_title">Adopting</string>
    <string name="progress_adopt_body">Adopting %s…</string>
    <string name="progress_new_link_title">Creating link</string>
    <string name="progress_new_link_body">Creating new sharing link…</string>
    <string name="err_client">Invalid settings</string>
        <string name="err_malformed_url">The server URL you entered is invalid.</string>
        <string name="err_missing_perms">Location permission is required to use this app.</string>
        <string name="err_location_disabled">Location services are disabled. Please enable high-accuracy location services to share your location.</string>
        <string name="err_server_not_configured">You haven\'t configured a backend yet. Please enter the details for your backend server in settings and try again.</string>
        <string name="err_invalid_duration">The duration you entered is invalid. Please choose a different duration.</string>
        <string name="err_no_nickname">You have to set a nickname before you can join group shares. Please set a nickname and try again.</string>
    <string name="err_connect">Connection error</string>
        <string name="err_proxy_failure">An error occurred when resolving the hostname of the configured proxy: %s</string>
        <string name="err_proxy_host_resolution">The IP address of the configured proxy (%s) could not be resolved!</string>
    <string name="err_server">Server error</string>
        <string name="err_empty">The server returned an empty response.</string>
        <string name="err_response_code">Received HTTP %s from server!</string>
    <string name="err_outdated">Server is out of date</string>
        <string name="err_ver_group">The server does not support group shares. Group shares are supported in version %s and above; the server is currently running version %s. Your share has been converted to an individual share.</string>
        <string name="err_ver_e2e">The server does not support end-to-end encryption. End-to-end encryption is supported in version %s and above; the server is currently running version %s. Your share will be created without end-to-end encryption to maintain compatibility.</string>
    <string name="ok_title">Connection established</string>
    <string name="ok_message">Location sharing is active! Click the share button to copy the publicly viewable URL for your share.</string>
    <string name="ended_title">Sharing ended</string>
    <string name="ended_message">Your location share has ended.</string>
    <string name="adopted_title">Share adopted</string>
    <string name="adopted_body">%s has been added to your share!</string>
    <string name="resume_title">Resume session</string>
    <string name="resume_body">You have an unfinished session:\n\nActive sharing link(s): %d\nExpires: %s\n\nDo you wish to resume this session?</string>
    <string name="link_added_title">Link created</string>
    <string name="link_added_body">A new link was successfully created for your shared location! Click the share button to copy the publicly viewable URL for your new share.</string>
    <string name="req_perms_title">Permission required</string>
    <string name="req_perms_message">This app requires access to your location to function, but this permission has not been granted yet. Please approve the following permission request, then click the start button again to retry.</string>
    <string name="battery_savings_title">Aggressive battery savings</string>
    <string name="battery_savings_body">You appear to be using a %s device. These devices have particularly strict battery saving settings that can prevent Hauk from sending location updates in the background.\n\nIt is recommended that you ensure Hauk is exempted from battery savings to ensure that the app does not unexpectedly stop working.\n\nThis message will not be displayed again.</string>
    <string name="manufacturer_huawei">Huawei</string>
    <string name="manufacturer_oneplus">OnePlus</string>
    <string name="manufacturer_xiaomi">Xiaomi</string>
    <string name="share_via">Share Hauk link via</string>
    <string name="share_subject">Follow my location on Hauk!</string>
    <string name="authorize_header">Broadcast authorization request</string>
    <string name="authorize_body">Hauk received and blocked an attempt to create a new location sharing session from a broadcast source which identified itself as</string>
    <string name="authorize_question">Do you wish to allow sessions to be created from broadcasts with this identification in the future?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prefs_header_connection">Connection</string>
    <string name="password_mask">Tap to edit</string>
    <string name="pref_cryptServer_title">Server URL</string>
    <string name="pref_cryptServer_hint" translatable="false">https://example.com/</string>
    <string name="pref_cryptUsername_title">Username</string>
    <string name="pref_cryptUsername_hint">&lt;optional&gt;</string>
    <string name="pref_cryptPassword_title">Password</string>
    <string name="pref_interval_title">Update interval (seconds)</string>
    <string name="pref_minUpdateDistance_title">Minimum distance between updates (meters)</string>
    <string name="pref_requestLink_title">Preferred link ID</string>
    <string name="pref_requestLink_hint">&lt;randomly generated&gt;</string>
    <string name="pref_enableE2E_title">Password protect share</string>
        <string name="pref_enableE2E_on">Enable end-to-end encryption</string>
        <string name="pref_enableE2E_off">Disable end-to-end encryption</string>
    <string name="pref_e2ePassword_title">Encryption password</string>
    <string name="pref_proxyType_title">Proxy</string>
        <string name="proxy_mode_default">System default</string>
        <string name="proxy_mode_none">Do not proxy</string>
        <string name="proxy_mode_http">HTTP</string>
        <string name="proxy_mode_socks">SOCKS 4/5</string>
    <string name="pref_proxyHost_title">Proxy hostname</string>
    <string name="pref_proxyPort_title">Proxy port</string>
    <string name="pref_connectTimeout_title">Connection timeout (seconds)</string>
    <string name="pref_noGnssFallback_title">Fall back to network location if GNSS is unavailable for (seconds)</string>
    <string name="pref_tlsCertValidation_title">HTTPS certificate validation</string>
</resources>