<?xml version="1.0" encoding="utf-8"?>
<!-- Authorization dialog for incoming broadcasts. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".global.ui.AuthorizationActivity">

    <!-- Header. -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorize_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <!-- Explanation body. -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorize_body" />

    <!-- Identifier will be displayed here. -->
    <TextView
        android:id="@+id/authorizeIdentifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:paddingVertical="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <!-- Question prompting the user to authorize the source. -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorize_question" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <!-- Buttons for the user to indicate their approval. -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_yes"
            android:onClick="accept" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_no"
            android:onClick="deny" />

    </LinearLayout>

</LinearLayout>
